--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-4401-7296"))
     )
 Description:
-    Templates in R Markdown for authoring manuscripts for submission
-    to Journal of Data Science (JDS).
+    Customized R Markdown templates and formats for authoring and
+    submitting articles to Journal of Data Science (JDS).
 Depends:
     R (>= 3.2.3)
 Imports:
