--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: jds.rmd
 Title: R Markdown Templates for Journal of Data Science
 Version: 0.1.0.9000
-Date: 2020-05-16
+Date: 2020-08-17
 Authors@R: c(
     person(given = "Wenjie", family = "Wang",
-           email = "wjwang.stat@gmail.com",
+           email = "wang@wwenjie.org",
            role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0363-3180")),
     person(given = "Jun", family = "Yan", role = "aut",
@@ -23,4 +23,4 @@ LazyData: true
 URL: https://https://gitlab.com/wenjie2wang/jds.rmd
 BugReports: https://https://gitlab.com/wenjie2wang/jds.rmd/issues
 Encoding: UTF-8
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
