--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: jds.rmd
-Title: R Markdown Templates for Journal of Data Science
+Title: R Markdown Template for Journal of Data Science
 Version: 0.2.0
 Authors@R: c(
     person(given = "Wenjie", family = "Wang",
@@ -10,7 +10,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0003-4401-7296"))
     )
 Description:
-    Customized R Markdown templates and formats for authoring and
+    Customized R Markdown template and format for authoring and
     submitting articles to Journal of Data Science.
 Depends:
     R (>= 3.2.3)
