--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: jds.rmd
-Title: R Markdown Template for Journal of Data Science
+Title: R Markdown Templates for Journal of Data Science
 Version: 0.3.0.9000
 Authors@R: c(
     person(given = "Wenjie", family = "Wang",
